# codebase_state_manager_mcp

./: .chunkhound.json  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BRANCH_NAME_IN_TUPLE.md  CHANGELOG.md  CONTRIBUTING.md  DELTA_STORAGE_README.md  Dockerfile  LICENSE  OLD_AGENTS.md  PLAN.md  PLAN_ORDERED_BY_COMPLEXITY.md  QUICKSTART.md  README.md  SETUP.md  STRICT_INSTRUCTIONS.md  TECH_STACK.md  coverage.json  docker-compose.external.yml  docker-compose.test.yml  docker-compose.yml  especificacao.md  init_neo4j_and_mcp.py  mypy.ini  opencode.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_mcp_server.py  specification.md  specification_corrected.md  test_client.py  test_fastmcp.py  test_init.py  test_server.py
.agent/: STATE.md
docs/: branch-detection.md
docs/plans/: branch-name-detection-plan.md
scripts/: dev.sh  entrypoint.sh  migrate_to_deltas.py  run_tests.sh  setup.sh
src/mcp_server/: __main__.py  config.py  mcp_server.py
tests/e2e/: test_complete_workflows.py  test_docker.py
tests/integration/: conftest.py  test_branch_workflow.py  test_docker_integration.py  test_genesis_ignore_integration.py  test_managed_neo4j_bootstrap.py  test_neo4j_repository.py  test_sqlite_repository.py
tests/performance/: test_genesis_ignore_performance.py
tests/security/: test_audit_logging.py  test_rate_limiting.py  test_security.py
tests/stress/: test_stress_transitions.py
tests/unit/: test_config.py  test_database_manager.py  test_delta_storage.py  test_git_manager.py  test_hash.py  test_ignore_manager.py  test_init_manager.py  test_launcher_configuration.py  test_logging.py  test_main.py  test_mcp_tools.py  (+13 more)
(+33 files in other folders)
